View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0025980 | Open CASCADE | OCCT:Modeling Algorithms | public | 2015-03-25 09:32 | 2015-05-14 16:32 |
Reporter | Assigned To | ||||
Priority | normal | Severity | minor | ||
Status | closed | Resolution | fixed | ||
Product Version | 6.9.0 | ||||
Target Version | 6.9.0 | Fixed in Version | 6.9.0 | ||
Summary | 0025980: Wrong result obtained by projection algorithm. | ||||
Description | Wrong result obtained by projection algorithm. | ||||
Steps To Reproduce | # Use the following DRAW commands to reproduce the problem: # restore c2t c restore s1t s project x c s # # Please, see x.jpg for more details | ||||
Tags | No tags attached. | ||||
Test case number | bugs modalg_5(010) bug25980 | ||||
2015-03-25 09:32 developer |
x.jpg (8,898 bytes) |
2015-03-25 09:33 developer |
c2t (1,496 bytes) |
2015-03-25 09:33 developer |
s1t (259 bytes) |
2015-03-27 15:33 developer |
curveStartZoom.png (46,537 bytes) |
|
Branch CR25980 has been created by aml. SHA-1: ea47922f143eab21cc00afaa74e1b45b92250aa7 Detailed log of new commits: Author: aml Date: Fri Mar 27 15:32:10 2015 +0300 0025980: Wrong result obtained by projection algorithm. Possibility of "projection failed" state to non-analytical and non-spline surfaces added. |
|
Dear msv, Please check current state of CR25980. Projection should fail due to big distance of projection at curve beginning (look at attached picture). |
|
Reviewed. |
|
Branch CR25980 has been updated forcibly by apv. SHA-1: eeb9053476c79a0b0b35c7c7aaee4e61e52ff912 |
|
Branch CR25980 has been rebased on the current master |
|
Branch CR25980 has been updated by msv. SHA-1: fcdce871ca0d50109bc8352ac57cb8be0fbd7688 Detailed log of new commits: Author: msv Date: Fri Mar 27 19:27:07 2015 +0300 Minor correction |
|
The last correction does not change the logic, just for a little performance improvement. |
|
Branch CR25980 has been updated by apv. SHA-1: 496a4441291c8dd10436775d68c7273b022bef8e Detailed log of new commits: Author: apv Date: Tue Mar 31 16:44:50 2015 +0300 Test-case for issue 0025980 |
|
Dear BugMaster, Branch CR25980 from occt git-repository (and master from products git-repository) was compiled on Linux, MacOS and Windows platforms and tested. SHA-1: fcdce871ca0d50109bc8352ac57cb8be0fbd7688 Number of compiler warnings: occt component: Linux: 18 (18 on master) Windows: 0 (0 on master) products component: Linux: 4 (4 on master) Windows: 0 (0 on master) Regressions/Differences: Not detected Testing cases: bugs modalg_5(010) bug25980 - OK http://occt-tests/CR25980-master-occt-64/Debian60-64/bugs/modalg_5/bug25980.html http://occt-tests/CR25980-master-occt-64/Windows-64-VC10/bugs/modalg_5/bug25980.html Testing on Linux: Total MEMORY difference: 86005101 / 90006532 [-4.45%] Total CPU difference: 53346.96999999986 / 21711.180000000055 [+145.71%] Testing on Windows: Total MEMORY difference: 56849047 / 56859930 [-0.02%] Total CPU difference: 16347.875193399748 / 16115.277702399679 [+1.44%] |
|
Branch CR25980_Fix has been created by aml. SHA-1: cff99b42219b955c4d16cb4653b499f03709b350 Detailed log of new commits: Author: aml Date: Tue Apr 7 15:58:15 2015 +0300 Fix for trimmed parameters case. Author: jgv Date: Mon Mar 30 14:43:50 2015 +0300 0025894: BRepOffsetAPI_NormalProjection fails to projection an edge on a face Test cases have been added Author: aml Date: Fri Mar 27 15:32:10 2015 +0300 0025980: Wrong result obtained by projection algorithm. Possibility of "projection failed" state to non-analytical and non-spline surfaces added. Test-case for issue 0025980 |
|
Branch CR25980_Fix has been updated forcibly by apv. SHA-1: c84cc056e6bb89165cc6cb2f7c2ee23397fa97b4 |
|
Branch CR25980_Fix has been rebased on the current master |
|
Dear BugMaster, Branch CR25980_Fix from occt git-repository (and master from products git-repository) was compiled on Linux, MacOS and Windows platforms and tested. SHA-1: c84cc056e6bb89165cc6cb2f7c2ee23397fa97b4 Number of compiler warnings: occt component: Linux: 18 (18 on master) Windows: 0 (0 on master) products component: Linux: 4 (4 on master) Windows: 0 (0 on master) Regressions/Differences: Not detected Testing on Linux: Total MEMORY difference: 93646312 / 93954954 [-0.33%] Total CPU difference: 55881.659999999225 / 52005.73999999962 [+7.45%] Testing on Windows: Total MEMORY difference: 56881984 / 56889340 [-0.01%] Total CPU difference: 16606.446850898952 / 16616.758516999023 [-0.06%] |
|
Branch CR25980 has been deleted by inv. SHA-1: 496a4441291c8dd10436775d68c7273b022bef8e |
|
Branch CR25980_Fix has been deleted by inv. SHA-1: c84cc056e6bb89165cc6cb2f7c2ee23397fa97b4 |
occt: master aa9d6bec 2015-03-27 12:32:10
Committer: |
0025980: Wrong result obtained by projection algorithm. Possibility of "projection failed" state to non-analytical and non-spline surfaces added. Test-case for issue 0025980 |
Affected Issues 0025980 |
|
mod - src/ProjLib/ProjLib_CompProjectedCurve.cxx | Diff File | ||
mod - src/ProjLib/ProjLib_ProjectedCurve.cxx | Diff File | ||
add - tests/bugs/modalg_5/bug25980 | Diff File |
Date Modified | Username | Field | Change |
---|---|---|---|
2015-03-25 09:32 |
|
New Issue | |
2015-03-25 09:32 |
|
Assigned To | => msv |
2015-03-25 09:32 |
|
File Added: x.jpg | |
2015-03-25 09:33 |
|
File Added: c2t | |
2015-03-25 09:33 |
|
File Added: s1t | |
2015-03-25 09:34 |
|
Status | new => assigned |
2015-03-25 09:38 |
|
Assigned To | msv => aml |
2015-03-27 15:33 |
|
File Added: curveStartZoom.png | |
2015-03-27 15:34 | git | Note Added: 0038942 | |
2015-03-27 15:36 |
|
Note Added: 0038943 | |
2015-03-27 15:36 |
|
Assigned To | aml => msv |
2015-03-27 15:36 |
|
Status | assigned => resolved |
2015-03-27 15:36 |
|
Note Edited: 0038943 | |
2015-03-27 18:43 |
|
Note Added: 0038953 | |
2015-03-27 18:43 |
|
Assigned To | msv => bugmaster |
2015-03-27 18:43 |
|
Status | resolved => reviewed |
2015-03-27 18:58 |
|
Assigned To | bugmaster => apv |
2015-03-27 19:16 | git | Note Added: 0038956 | |
2015-03-27 19:17 |
|
Note Added: 0038957 | |
2015-03-27 19:30 | git | Note Added: 0038960 | |
2015-03-27 19:32 |
|
Note Added: 0038961 | |
2015-03-31 16:45 | git | Note Added: 0039046 | |
2015-03-31 16:47 |
|
Test case number | => bugs modalg_5(010) bug25980 |
2015-03-31 16:47 |
|
Note Added: 0039047 | |
2015-03-31 16:47 |
|
Assigned To | apv => bugmaster |
2015-03-31 16:47 |
|
Status | reviewed => tested |
2015-04-07 16:04 | git | Note Added: 0039314 | |
2015-04-07 16:11 | bugmaster | Assigned To | bugmaster => apv |
2015-04-07 18:42 | git | Note Added: 0039336 | |
2015-04-07 18:43 |
|
Note Added: 0039337 | |
2015-04-08 14:29 |
|
Note Added: 0039365 | |
2015-04-08 14:30 |
|
Assigned To | apv => bugmaster |
2015-04-10 14:09 |
|
Changeset attached | => occt master aa9d6bec |
2015-04-10 14:09 |
|
Assigned To | bugmaster => apv |
2015-04-10 14:09 |
|
Status | tested => verified |
2015-04-10 14:09 |
|
Resolution | open => fixed |
2015-05-14 15:28 |
|
Status | verified => closed |
2015-05-14 15:31 |
|
Fixed in Version | => 6.9.0 |
2015-05-14 16:32 | git | Note Added: 0041046 | |
2015-05-14 16:32 | git | Note Added: 0041047 |