0025980: Wrong result obtained by projection algorithm.

Possibility of "projection failed" state to non-analytical and non-spline surfaces added.
Test-case for issue #25980